--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,50 @@
-aiohttp==3.7.4.post0
 aniso8601==9.0.1
-async-timeout==3.0.1
-attrs==20.3.0
+appdirs==1.4.4
+attrs==21.2.0
 beautifulsoup4==4.9.3
-bidict==0.21.2
-certifi==2020.12.5
-chardet==4.0.0
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.2
-dnspython==1.16.0
-eventlet==0.30.1
-Flask==1.1.2
+command-not-found==0.3
+cssselect==1.1.0
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
+fake-useragent==0.1.11
+Flask==1.1.4
 Flask-Cors==3.0.10
 flask-restplus==0.13.0
-greenlet==1.0.0
+flask-restx==0.4.0
 gunicorn==20.1.0
-html5lib==1.1
-idna==2.10
-importlib-metadata==3.10.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
-MarkupSafe==1.1.1
-monotonic==1.6
-multidict==5.1.0
-pycryptodome==3.9.7
+language-selector==0.1
+lxml==4.6.3
+MarkupSafe==2.0.0
+netifaces==0.10.4
+parse==1.19.0
+pyee==8.1.0
+PyGObject==3.36.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyppeteer==0.2.5
+pyquery==1.4.3
 pyrsistent==0.17.3
+python-apt==2.0.0+ubuntu0.20.4.2
 pytz==2021.1
-redis==3.5.3
-requests==2.25.1
-six==1.15.0
+PyYAML==5.3.1
+requests==2.22.0
+requests-html==0.10.0
+six==1.14.0
 soupsieve==2.2.1
-timeloop==1.0.2
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-webencodings==0.5.1
-websocket-client==0.58.0
-Werkzeug==0.16.1
-yarl==1.6.3
-zipp==3.4.1
-requests_html
+ssh-import-id==5.10
+tqdm==4.60.0
+ubuntu-advantage-tools==20.3
+ufw==0.36
+urllib3==1.25.8
+w3lib==1.22.0
+websockets==8.1
+Werkzeug==1.0.1
